--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul>
             <li><a href="recipes/cheesecake.html">Key Lime Cheesecake</a></li>
             <li><a href="recipes/peanutbutterbar.html">No-Bake Peanut Butter Chex Bars</a></li>
-            <li><a href="recipes/pumpkin-pie.html">Pumpkin Pie Dump Cake</a></li>
+            <li><a href="recipes/pumpkinpie.html">Pumpkin Pie Dump Cake</a></li>
         </ul>
     </body>
 </html>
